@@ -1,3 +1,7 @@
+2003-03-31  Seth Robertson  <seth@winwood.sysdetect.com>
+
+	* src/proto.c (main): Move poptFree to avoid freeing data in use.
+
 2003-03-29  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_run.c (bk_run_checkeventq): gettimeofday at most twice
